[package]
name = "build-example1"
version = "0.1.0"
edition = "2021"
# tells Cargo that we are linking to the libz library.
links = "z"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[build-dependencies]
# finding the library and telling Cargo where it is
pkg-config = "0.3.16"
